--- a/client/src/stylesheets/theme.css
+++ b/client/src/stylesheets/theme.css
@@ -11,6 +11,14 @@
     background-color: var(--colour-secondary) ;
 }
 
+.bg-error{
+    background-color: #ff0000;
+}
+
+.bg-warning{
+    background-color: #a2840e;
+}
+
 .bg-white{
     background-color: #fff ;
 }
