--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,8 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Inria+Serif:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
+body{
+    background-color: #f5f5f5;
+}
+
 *{
     font-family: "Montserrat", sans-serif;
     box-sizing: border-box ;
     margin: 0;
     padding: 0;
+    color: rgb(70, 70, 70);
+}
+
+h1,span{
+    color: rgb(70, 70, 70)
 }
